# DobieStation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TASKS.md  appveyor.yml  gen-clang.sh  meson.build
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: CI.yml
DobieStation/: .gitignore  Core.vcxproj  Core.vcxproj.filters  DobieQt.vcxproj  DobieQt.vcxproj.filters  DobieStation.aps  DobieStation.pro  DobieStation.rc  DobieStation.sln  DobieStation.vcxproj  DobieStation.vcxproj.filters  InputCommon.aps  InputCommon.vcxproj  InputCommon.vcxproj.filters  RCa11632  bios_hle.cpp  bios_hle.hpp  common.props  cop0.cpp  cop1.cpp  cop1.hpp  dmac.cpp  dmac.hpp  emotion.cpp  emotion.hpp  emotion_mmi.cpp  emotion_special.cpp  emotiondisasm.cpp  emotioninterpreter.cpp  emotioninterpreter.hpp  emulator.cpp  emulator.hpp  emuwindow.cpp  emuwindow.hpp  gs.cpp  gs.hpp  gscontext.cpp  main.cpp  qt.props  resource.h  (+1 more)
DobieStation/application/: application.pro
DobieStation/libFLAC/: libFLAC.pro  libFLAC.vcxproj  libFLAC.vcxproj.filters
DobieStation/libchdr/: libchdr.pro  libchdr.vcxproj  libchdr.vcxproj.filters
DobieStation/libdeflate/: libdeflate.pro  libdeflate.vcxproj  libdeflate.vcxproj.filters
DobieStation/lzma/: lzma.pro  lzma.vcxproj  lzma.vcxproj.filters
DobieStation/zlib/: zlib.pro  zlib.vcxproj  zlib.vcxproj.filters
cmake/: DobieHelpers.cmake  FindLibevdev.cmake  Toolchain-clang-linux-native.cmake
data/: DobieStation.desktop.in
docs/: BIOS.md  DMAC.md  EmotionEngine.md  GIF.md  IOP.md  README.md
ext/libFLAC/: CMakeLists.txt
ext/libdeflate/: CMakeLists.txt  libdeflate.pro
src/Inputcommon/: common_input.h
src/common/: gsdump.cpp  gsdump.hpp
src/core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  bios_hle.cpp  bios_hle.hpp  circularFIFO.h  circularFIFO.hpp  cop0.cpp  cop0.hpp  cop1.cpp  cop1.hpp  dmac.cpp  dmac.hpp  emotion.cpp  emotion.hpp  emotion_fpu.cpp  emotion_mmi.cpp  emotion_special.cpp  emotionasm.cpp  emotiondisasm.cpp  emotiondisasm.hpp  emotioninterpreter.cpp  emotioninterpreter.hpp  emulator.cpp  emulator.hpp  errors.cpp  errors.hpp  gif.cpp  gif.hpp  gs.cpp  gs.hpp  gscontext.cpp  gscontext.hpp  gsjit.asm  gsmem.cpp  gsmem.hpp  gsregisters.cpp  gsregisters.hpp  gsthread.cpp  gsthread.hpp  (+19 more)
src/core/audio/: ps_adpcm.cpp  ps_adpcm.hpp  utils.cpp  utils.hpp
src/core/ee/: bios_hle.cpp  cop0.cpp  cop0.hpp  cop1.cpp  cop1.hpp  cop2.cpp  cop2.hpp  dmac.cpp  dmac.hpp  ee_jit.cpp  ee_jit.hpp  ee_jit64.cpp  ee_jit64.hpp  ee_jit64_cop2.cpp  ee_jit64_fpu.cpp  ee_jit64_fpu_avx.cpp  ee_jit64_gpr.cpp  ee_jit64_mmi.cpp  ee_jit64_vu.cpp  ee_jit_asm.asm  ee_jittrans.cpp  ee_jittrans.hpp  emotion.cpp  emotion.hpp  emotion_breakpoint.cpp  emotion_breakpoint.hpp  emotion_fpu.cpp  emotion_mmi.cpp  emotion_special.cpp  emotion_vu0.cpp  emotionasm.cpp  emotionasm.hpp  emotiondisasm.cpp  emotiondisasm.hpp  emotioninterpreter.cpp  emotioninterpreter.hpp  intc.cpp  intc.hpp  ipu.cpp  ipu.hpp  (+17 more)
src/core/ee/ipu/: chromtable.cpp  chromtable.hpp  codedblockpattern.cpp  codedblockpattern.hpp  dct_coeff.cpp  dct_coeff.hpp  dct_coeff_table0.cpp  dct_coeff_table0.hpp  dct_coeff_table1.cpp  dct_coeff_table1.hpp  ipu.cpp  ipu.hpp  ipu_fifo.cpp  ipu_fifo.hpp  lumtable.cpp  lumtable.hpp  mac_addr_inc.cpp  mac_addr_inc.hpp  mac_b_pic.cpp  mac_b_pic.hpp  mac_i_pic.cpp  mac_i_pic.hpp  mac_p_pic.cpp  mac_p_pic.hpp  motioncode.cpp  motioncode.hpp  vlc_table.cpp  vlc_table.hpp
src/core/iop/: cdvd.cpp  cdvd.hpp  cso_reader.cpp  cso_reader.hpp  firewire.cpp  firewire.hpp  gamepad.cpp  gamepad.hpp  iop.cpp  iop.hpp  iop_cop0.cpp  iop_cop0.hpp  iop_dma.cpp  iop_dma.hpp  iop_intc.cpp  iop_intc.hpp  iop_interpreter.cpp  iop_interpreter.hpp  iop_timers.cpp  iop_timers.hpp  memcard.cpp  memcard.hpp  sio2.cpp  sio2.hpp  spu.cpp  spu.hpp  spu_envelope.cpp  spu_envelope.hpp  spu_tables.cpp
src/core/iop/cdvd/: bincuereader.cpp  bincuereader.hpp  cdvd.cpp  cdvd.hpp  cdvd_container.hpp  chd_reader.cpp  chd_reader.hpp  cso_reader.cpp  cso_reader.hpp  iso_reader.cpp  iso_reader.hpp
src/core/iop/spu/: spu.cpp  spu.hpp  spu_adpcm.cpp  spu_adpcm.hpp  spu_envelope.cpp  spu_envelope.hpp  spu_interpolate.cpp  spu_reverb.cpp  spu_utils.hpp
src/core/jitcommon/: emitter64.cpp  emitter64.hpp  ir_block.cpp  ir_block.hpp  ir_instr.cpp  ir_instr.hpp  ir_instrlist.inc  jitcache.cpp  jitcache.hpp
src/core/tests/iop/: alu.cpp
src/inputCommon/: xinput.cpp  xinput.hpp
src/inputCommon/inputCommon/: commonInput.h  inputCommon.vcxproj  inputCommon.vcxproj.filters
src/input_common/: CMakeLists.txt  common_input.cpp  common_input.hpp  input_api.cpp  input_api.hpp  linux_input.cpp  linux_input.hpp  mac_input.cpp  mac_input.hpp  raw.cpp  raw.hpp  win_input.cpp  win_input.hpp
src/qt/: CMakeLists.txt  DobieQt.vcxproj  DobieQt.vcxproj.filters  and_breakpoint_window.cpp  and_breakpoint_window.hpp  and_breakpoint_window.ui  bios.cpp  bios.hpp  breakpoint_window.cpp  breakpoint_window.hpp  breakpoint_window.ui  ee_debugwindow.cpp  ee_debugwindow.hpp  ee_debugwindow.ui  emuthread.cpp  emuthread.hpp  emuwindow.cpp  emuwindow.hpp  gamelistwidget.cpp  gamelistwidget.hpp  gsdebugger.cpp  gsdebugger.hpp  input.hpp  loggerwindow.cpp  loggerwindow.h  loggerwindow.hpp  main.cpp  memcardwindow.cpp  memcardwindow.hpp  memcardwindow.ui  pad_configure.cpp  pad_configure.hpp  pad_configure.ui  renderwidget.cpp  renderwidget.hpp  settings.cpp  settings.hpp  settingswindow.cpp  settingswindow.hpp
src/qt/gamelist/: gamelistmodel.cpp  gamelistmodel.hpp  gamelistproxy.cpp  gamelistproxy.hpp  gamelistwatcher.cpp  gamelistwatcher.hpp  gamelistwidget.cpp  gamelistwidget.hpp
src/util/: CMakeLists.txt  Utils.vcxproj  scoped_lib.cpp  scoped_lib.hpp  types.hpp  wsi.hpp
